modified index.html, readme and style.css

--- a/index.html
+++ b/index.html
@@ -15,23 +15,23 @@
 </head>
 <body>
     <!-- Header -->
-    <header class="header-wrapper">
-        <a href="#" class="logo">
-            <h1>Sozo</h1>
-        </a>
-        <button class="menu_btn" type="button">
-            <img src="images/menu.png" alt="menu-button">
-        </button>
+    <header class="header">
+            <a href="#" class="logo">
+                Sozo
+            </a>
+            <button class="menu_btn" type="button">
+                <img src="images/menu.png" alt="menu-button">
+            </button>
     </header>
 
     <!-- Headline Section -->
     <section class="headline">
         <div class="container">
             <div class="title">
-                <h2>
+                <h1>
                     I'm Theo <br>
                     Glad to see you!
-                </h2>
+                </h1>
             </div>
             <div class="info">
                 <p>
@@ -42,7 +42,7 @@
                 </p>
             </div>
             <div class="social-media">
-                <a href="#">LET’S CONNECT</a>
+                <h2><a href="#">LET’S CONNECT</a></h2>
             </div>
             
             <ul class="social-icons">
