modified index.html, readme file and style.css

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
             
             <ul class="social-icons">
                 <li>
-                    <a href="#">
+                    <a href="https://twitter.com/dok_theo">
                         <img src="images/twitter.png" alt="twitter">
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://linkedin.com/in/Theophilusdoku">
                         <img src="images/linkedin.png" alt="linkedin">
                     </a>
                 </li>
@@ -62,7 +62,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#">
+                    <a href="https://github.com/theodoku">
                         <img src="images/github.png" alt="github">
                     </a>
                 </li>
