Resize hamburger icon and put button in a nav tag

--- a/index.html
+++ b/index.html
@@ -16,12 +16,16 @@
 <body>
     <!-- Header -->
     <header class="header">
+
             <a href="#" class="logo">
                 Sozo
             </a>
-            <button class="menu_btn" type="button">
-                <img src="images/menu.png" alt="menu-button">
-            </button>
+
+            <nav>
+                <button class="menu_btn" type="button">
+                    <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
+                </button>
+            </nav>
     </header>
 
     <!-- Headline Section -->
