create a works section, add portfolio images, modified style.css

--- a/index.html
+++ b/index.html
@@ -78,5 +78,149 @@
             </ul>
         </div>
     </section>
+
+    <!-- Works Section -->
+    <section class="works">
+        <div class="cards">
+            <div class="project-image">
+                <img src="images/cardImg1.png" class="portfolio-pic"   alt="portfolio picture">
+            </div>
+            <div class="project-content">
+                <div class="project-info">
+                    <div class="project-name">
+                        <h2 id="p-title">Tonic</h2>
+                    </div>
+                    <ul class="p-info">
+                        <li class="company">CANOPY</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="position">Back End Dev</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="date">2015</li>
+                    </ul>
+                    <div>
+                        <p class="paragraph">
+                          A daily selection of privately personalized reads; no accounts
+                          or sign-ups required.
+                        </p<>
+                    </div>
+                    <div>
+                        <ul class="web-lang">
+                            <li class="HTML">html</li>
+                            <li class="CSS">css</li>
+                            <li class="javaScript">javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="buttons-wrapper">
+                        <button type="button" class="buttons">See Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="project-image">
+                <img src="images/cardImg2.png" class="portfolio-pic"   alt="portfolio picture">
+            </div>
+            <div class="project-content">
+                <div class="project-info">
+                    <div class="project-name">
+                        <h2 id="p-title">Multi-Post Stories</h2>
+                    </div>
+                    <ul class="p-info">
+                        <li class="company">CANOPY</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="position">Back End Dev</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="date">2015</li>
+                    </ul>
+                    <div>
+                        <p class="paragraph">
+                          A daily selection of privately personalized reads; no accounts
+                          or sign-ups required.
+                        </p<>
+                    </div>
+                    <div>
+                        <ul class="web-lang">
+                            <li class="HTML">html</li>
+                            <li class="CSS">css</li>
+                            <li class="javaScript">javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="buttons-wrapper">
+                        <button type="button" class="buttons">See Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="project-image">
+                <img src="images/cardImg3.png" class="portfolio-pic"   alt="portfolio picture">
+            </div>
+            <div class="project-content">
+                <div class="project-info">
+                    <div class="project-name">
+                        <h2 id="p-title">Tonic</h2>
+                    </div>
+                    <ul class="p-info">
+                        <li class="company">CANOPY</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="position">Back End Dev</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="date">2015</li>
+                    </ul>
+                    <div>
+                        <p class="paragraph">
+                          A daily selection of privately personalized reads; no accounts
+                          or sign-ups required.
+                        </p<>
+                    </div>
+                    <div>
+                        <ul class="web-lang">
+                            <li class="HTML">html</li>
+                            <li class="CSS">css</li>
+                            <li class="javaScript">javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="buttons-wrapper">
+                        <button type="button" class="buttons">See Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="cards">
+            <div class="project-image">
+                <img src="images/cardImg4.png" class="portfolio-pic" alt="portfolio picture">
+            </div>
+            <div class="project-content">
+                <div class="project-info">
+                    <div class="project-name">
+                        <h2 id="p-title">Multi-Post Stories</h2>
+                    </div>
+                    <ul class="p-info">
+                        <li class="company">CANOPY</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="position">Back End Dev</li>
+                        <li ><img src="images/dot.png" class="dot" alt="dot"></li>
+                        <li class="date">2015</li>
+                    </ul>
+                    <div>
+                        <p class="paragraph">
+                          A daily selection of privately personalized reads; no accounts
+                          or sign-ups required.
+                        </p<>
+                    </div>
+                    <div>
+                        <ul class="web-lang">
+                            <li class="HTML">html</li>
+                            <li class="CSS">css</li>
+                            <li class="javaScript">javaScript</li>
+                        </ul>
+                    </div>
+                    <div class="buttons-wrapper">
+                        <button type="button" class="buttons">See Project</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
