modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
             <div class="project-content">
                 <div class="project-info">
                     <div class="project-name">
-                        <h2 id="p-title">Multi-Post Stories</h2>
+                        <h2 id="p-title">Multi-Post<br>Stories</h2>
                     </div>
                     <ul class="p-info">
                         <li class="company">CANOPY</li>
@@ -193,7 +193,7 @@
             <div class="project-content">
                 <div class="project-info">
                     <div class="project-name">
-                        <h2 id="p-title">Multi-Post Stories</h2>
+                        <h2 id="p-title">Multi-Post<br>Stories</h2>
                     </div>
                     <ul class="p-info">
                         <li class="company">CANOPY</li>
@@ -280,40 +280,44 @@
                 <img src="images/drop.png" id="drop"   alt="dropdown" />
               </div>
             </li>
-            <ul class="languages-list">
-              <li class="lang-skills">
-                <div class="langImg">
-                  <img src="images/js.png" id="langImag" alt="javascript" />
-                </div>
-                <h4>Javascript</h4>
-              </li>
-              <li class="lang-skills">
-                <div class="langImg">
-                  <img src="images/html.png" id="langImag" alt="html" />
-                </div>
-                <h4>HTML</h4>
-              </li>
-              <li class="lang-skills">
-                <div class="langImg">
-                  <img src="images/css.png" id="langImag" alt="css" />
-                </div>
-                <h4>CSS</h4>
-              </li>
-            </ul>
-            <li class="skill-sets">
-              <h3 class="langTitle">Frameworks</h3>
-              <div class="arrow">
-                <img src="images/arrow.png" id="arrow"   alt="arrow" />
-              </div>
-            </li>
-            <hr />
-            <li class="skill-sets">
-              <h3 class="langTitle">Skills</h3>
-              <div class="arrow">
-                <img src="images/arrow.png"  id="arrow" alt="arrow" />
-              </div>
-            </li>
-            <hr />
+            <li>
+                <li>
+                    <ul class="languages-list">
+                    <li class="lang-skills">
+                        <div class="langImg">
+                        <img src="images/js.png" id="langImag" alt="javascript" />
+                        </div>
+                        <h4>Javascript</h4>
+                    </li>
+                    <li class="lang-skills">
+                        <div class="langImg">
+                        <img src="images/html.png" id="langImag" alt="html" />
+                        </div>
+                        <h4>HTML</h4>
+                    </li>
+                    <li class="lang-skills">
+                        <div class="langImg">
+                        <img src="images/css.png" id="langImag" alt="css" />
+                        </div>
+                        <h4>CSS</h4>
+                    </li>
+                    </ul>
+               </li>
+                <li class="skill-sets">
+                    <h3 class="langTitle">Frameworks</h3>
+                    <div class="arrow">
+                        <img src="images/arrow.png" id="arrow"   alt="arrow" />
+                    </div>
+                </li>
+                <hr />
+                <li class="skill-sets">
+                    <h3 class="langTitle">Skills</h3>
+                    <div class="arrow">
+                        <img src="images/arrow.png"  id="arrow" alt="arrow" />
+                    </div>
+                </li>
+                <hr />
+           </li>
         </ul>
     </section>
 </body>
