add images, create a footer wrapper and style footer wrapper

--- a/index.html
+++ b/index.html
@@ -320,5 +320,20 @@
            </li>
         </ul>
     </section>
+
+    <!-- Contact Section -->
+    <footer class="contact-form">
+        <div class="footer-wrapper">
+            <div class="footer-contact">
+                <h3 class="contact">Contact me</h3>
+            </div>  
+            <p id="text-footer">
+                If you have an application you are interested in developing, a feature
+                that you need built or a project that needs coding. I’d love to help
+                with it
+            </p>
+            
+        </div>
+    </footer>
 </body>
 </html>
