add action link to form and modified css

--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
                 that you need built or a project that needs coding. I’d love to help
                 with it
             </p>
-            <form action="" id="form" method="Post">
+            <form action="https://formspree.io/f/meqdvkdq" id="form" method="Post">
                 <ul class="list">
                   <li class="listInput">
                     <label>
