create branch desktop, add images and use css media queries

--- a/index.html
+++ b/index.html
@@ -25,6 +25,18 @@
                 <button class="menu_btn" type="button">
                     <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
                 </button>
+
+                <ul class="nav_wrapper">
+                    <li class="nav_item">
+                      <a href="#" class="nav_link"> Portfolio </a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#" class="nav_link"> About </a>
+                    </li>
+                    <li class="nav_item">
+                      <a href="#" class="nav_link"> Contact </a>
+                    </li>
+                </ul>
             </nav>
     </header>
 
@@ -101,7 +113,7 @@
                         <p class="paragraph">
                           A daily selection of privately personalized reads; no accounts
                           or sign-ups required.
-                        </p<>
+                        </p>
                     </div>
                     <div>
                         <ul class="web-lang">
@@ -116,14 +128,14 @@
                 </div>
             </div>
         </div>
-        <div class="cards">
+        <div class="cards rev-2">
             <div class="project-image">
-                <img src="images/cardImg2.png" class="portfolio-pic"   alt="portfolio picture">
+                <img src="images/cardImg2.png" class="portfolio-pic2"   alt="portfolio picture">
             </div>
             <div class="project-content">
                 <div class="project-info">
                     <div class="project-name">
-                        <h2 id="p-title">Multi-Post<br>Stories</h2>
+                        <h2 id="p-title">Multi-Post Stories</h2>
                     </div>
                     <ul class="p-info">
                         <li class="company">CANOPY</li>
@@ -136,7 +148,7 @@
                         <p class="paragraph">
                           A daily selection of privately personalized reads; no accounts
                           or sign-ups required.
-                        </p<>
+                        </p>
                     </div>
                     <div>
                         <ul class="web-lang">
@@ -171,7 +183,7 @@
                         <p class="paragraph">
                           A daily selection of privately personalized reads; no accounts
                           or sign-ups required.
-                        </p<>
+                        </p>
                     </div>
                     <div>
                         <ul class="web-lang">
@@ -186,14 +198,14 @@
                 </div>
             </div>
         </div>
-        <div class="cards">
+        <div class="cards rev-4" >
             <div class="project-image">
-                <img src="images/cardImg4.png" class="portfolio-pic" alt="portfolio picture">
+                <img src="images/cardImg4.png" class="portfolio-pic4" alt="portfolio picture">
             </div>
             <div class="project-content">
                 <div class="project-info">
                     <div class="project-name">
-                        <h2 id="p-title">Multi-Post<br>Stories</h2>
+                        <h2 id="p-title">Multi-Post Stories</h2>
                     </div>
                     <ul class="p-info">
                         <li class="company">CANOPY</li>
@@ -206,7 +218,7 @@
                         <p class="paragraph">
                           A daily selection of privately personalized reads; no accounts
                           or sign-ups required.
-                        </p<>
+                        </p>
                     </div>
                     <div>
                         <ul class="web-lang">
