--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
                     </label>
                   </li>
                   <li class="listInput">
-                    <label>
+                    <label for="text">
                     <textarea
                       name="Message"
                       placeholder="Write your message here"
