Fixed some accessibility issues

--- a/index.html
+++ b/index.html
@@ -374,11 +374,12 @@
                   <li class="listInput">
                     <label for="text">
                     <textarea
+                    id="text"
                       name="Message"
                       placeholder="Write your message here"
                       maxlength="500"
                       required
-                    ></textarea>
+                    >Write your message here</textarea>
                   </label>
                   </li>
                   <div id="error"></div>
