modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -302,19 +302,25 @@
                                     <div class="langImg">
                                     <img src="images/js.png" id="langImag" alt="javascript" />
                                     </div>
-                                    <h4>Javascript</h4>
+                                    <ul>
+                                        <li id="lang">Javascript</li>
+                                    </ul>
                                 </li>
                                 <li class="lang-skills">
                                     <div class="langImg">
                                     <img src="images/html.png" id="langImag" alt="html" />
                                     </div>
-                                    <h4>HTML</h4>
+                                    <ul>
+                                         <li id="lang">HTML</li>
+                                    </ul>
                                 </li>
                                 <li class="lang-skills">
                                     <div class="langImg">
                                     <img src="images/css.png" id="langImag" alt="css" />
                                     </div>
-                                    <h4>CSS</h4>
+                                    <ul>
+                                        <li id="lang">CSS</li>
+                                    </ul>
                                 </li>
                             </ul>
                     </li>
