modified navigation at index.hmtl, style.css and added images

--- a/index.html
+++ b/index.html
@@ -16,16 +16,19 @@
 <body>
     <!-- Header -->
     <header class="header">
-
             <a href="#" class="logo">
                 Sozo
             </a>
 
-            <nav>
-                <button class="menu_btn" type="button">
-                    <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
-                </button>
-
+            <button class="menu_btn" type="button">
+                <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
+            </button>
+            <nav class="navigation">
+                <div class="btn-wrapper">
+                    <button class="close-btn" type="button">
+                        <img src="images/closeBtn.png" alt="menu-button">
+                    </button>
+                </div>
                 <ul class="nav_wrapper">
                     <li class="nav_item">
                       <a href="#portfolio" class="nav_link"> Portfolio </a>
