--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
                 Sozo
             </a>
 
-            <button class="menu_btn" type="button">
+            <button class="menu_btn" type="button" onclick="openMobileMenu()">
                 <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
             </button>
-            <nav class="navigation">
+            <nav class="navigation" id="nav">
                 <div class="btn-wrapper">
-                    <button class="close-btn" type="button">
+                    <button class="close-btn" type="button" onclick="closeMobileMenu()">
                         <img src="images/closeBtn.png" alt="menu-button">
                     </button>
                 </div>
