modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
 <body id="body">
     <!-- Header -->
     <header class="header">
-            <a href="#" class="logo">
-                Sozo
-            </a>
-
-            <button class="menu_btn" type="button" onclick="openMobileMenu()">
-                <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
-            </button>
+            <div class="header_wrapper">
+                <a href="#" class="logo">
+                    Sozo
+                </a>
+                <button class="menu_btn" type="button" onclick="openMobileMenu()">
+                    <img src="images/menu.png" class="hamburger-icon"   alt="menu-button">
+                </button>
+            </div>
             <nav class="navigation" id="nav">
                 <div class="btn-wrapper">
                     <button class="close-btn" type="button" onclick="closeMobileMenu()">
