modified index.html and style.css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <nav class="navigation" id="nav">
                 <div class="btn-wrapper">
                     <button class="close-btn" type="button" onclick="closeMobileMenu()">
-                        <img src="images/closeBtn.png" alt="menu-button">
+                        <img src="images/closeBtn.png" class="close"  alt="menu-button">
                     </button>
                 </div>
                 <ul class="nav_wrapper">
