modified index.html, style.css and script.js

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         </ul>
                     </div>
                     <div class="buttons-wrapper">
-                        <button type="button" class="buttons">See Project</button>
+                        <button type="button" class="buttons" onclick="openModal()">See Project</button>
                     </div>
                 </div>
             </div>
@@ -162,7 +162,7 @@
                         </ul>
                     </div>
                     <div class="buttons-wrapper">
-                        <button type="button" class="buttons">See Project</button>
+                        <button type="button" class="buttons" onclick="openModal()">See Project</button>
                     </div>
                 </div>
             </div>
@@ -197,7 +197,7 @@
                         </ul>
                     </div>
                     <div class="buttons-wrapper">
-                        <button type="button" class="buttons">See Project</button>
+                        <button type="button" class="buttons" onclick="openModal()">See Project</button>
                     </div>
                 </div>
             </div>
@@ -232,7 +232,7 @@
                         </ul>
                     </div>
                     <div class="buttons-wrapper">
-                        <button type="button" class="buttons">See Project</button>
+                        <button type="button" class="buttons" onclick="openModal()">See Project</button>
                     </div>
                 </div>
             </div>
