modified index.html, created works section dynamically at script.js and modified style.css

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <!-- Works Section -->
     <section class="works" id="portfolio">
-        <div class="cards">
+        <!-- <div class="cards">
             <div class="project-image">
                 <img src="images/cardImg1.png" class="portfolio-pic"   alt="portfolio picture">
             </div>
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </section>
 
     <!-- About Section -->
