modified index.html, script.js and style.css

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
                 <ul class="list">
                   <li class="listInput">
                     <label for="name">
-                      <input id="name"
+                      <input id="fname"
                         type="text"
                         name="Name"
                         placeholder="Full Name"
@@ -243,12 +243,12 @@
                   <li class="listInput">
                     <label for="text">
                     <textarea
-                    id="text"
+                      id="msg"
                       name="Message"
                       placeholder="Write your message here"
                       maxlength="500"
                       required
-                    >Write your message here</textarea>
+                    ></textarea>
                   </label>
                   </li>
                   <div id="error"></div>
